lsp-sample/server/src/parser/LuaParser.ts
// Generated from grammar/Lua.g4 by ANTLR 4.9.0-SNAPSHOT


import { ATN } from "antlr4ts/atn/ATN";
import { ATNDeserializer } from "antlr4ts/atn/ATNDeserializer";
import { FailedPredicateException } from "antlr4ts/FailedPredicateException";
import { NotNull } from "antlr4ts/Decorators";
import { NoViableAltException } from "antlr4ts/NoViableAltException";
import { Override } from "antlr4ts/Decorators";
import { Parser } from "antlr4ts/Parser";
import { ParserRuleContext } from "antlr4ts/ParserRuleContext";
import { ParserATNSimulator } from "antlr4ts/atn/ParserATNSimulator";
import { ParseTreeListener } from "antlr4ts/tree/ParseTreeListener";
import { ParseTreeVisitor } from "antlr4ts/tree/ParseTreeVisitor";
import { RecognitionException } from "antlr4ts/RecognitionException";
import { RuleContext } from "antlr4ts/RuleContext";
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from "antlr4ts/tree/TerminalNode";
import { Token } from "antlr4ts/Token";
import { TokenStream } from "antlr4ts/TokenStream";
import { Vocabulary } from "antlr4ts/Vocabulary";
import { VocabularyImpl } from "antlr4ts/VocabularyImpl";

import * as Utils from "antlr4ts/misc/Utils";

import { LuaListener } from "./LuaListener";
import { LuaVisitor } from "./LuaVisitor";


export class LuaParser extends Parser {
	public static readonly T__0 = 1;
	public static readonly T__1 = 2;
	public static readonly T__2 = 3;
	public static readonly T__3 = 4;
	public static readonly T__4 = 5;
	public static readonly T__5 = 6;
	public static readonly T__6 = 7;
	public static readonly T__7 = 8;
	public static readonly T__8 = 9;
	public static readonly T__9 = 10;
	public static readonly T__10 = 11;
	public static readonly T__11 = 12;
	public static readonly T__12 = 13;
	public static readonly T__13 = 14;
	public static readonly T__14 = 15;
	public static readonly T__15 = 16;
	public static readonly T__16 = 17;
	public static readonly T__17 = 18;
	public static readonly T__18 = 19;
	public static readonly T__19 = 20;
	public static readonly T__20 = 21;
	public static readonly T__21 = 22;
	public static readonly T__22 = 23;
	public static readonly T__23 = 24;
	public static readonly T__24 = 25;
	public static readonly T__25 = 26;
	public static readonly T__26 = 27;
	public static readonly T__27 = 28;
	public static readonly T__28 = 29;
	public static readonly T__29 = 30;
	public static readonly T__30 = 31;
	public static readonly T__31 = 32;
	public static readonly T__32 = 33;
	public static readonly T__33 = 34;
	public static readonly T__34 = 35;
	public static readonly T__35 = 36;
	public static readonly T__36 = 37;
	public static readonly T__37 = 38;
	public static readonly T__38 = 39;
	public static readonly T__39 = 40;
	public static readonly T__40 = 41;
	public static readonly T__41 = 42;
	public static readonly T__42 = 43;
	public static readonly T__43 = 44;
	public static readonly T__44 = 45;
	public static readonly T__45 = 46;
	public static readonly T__46 = 47;
	public static readonly T__47 = 48;
	public static readonly T__48 = 49;
	public static readonly T__49 = 50;
	public static readonly T__50 = 51;
	public static readonly T__51 = 52;
	public static readonly T__52 = 53;
	public static readonly T__53 = 54;
	public static readonly T__54 = 55;
	public static readonly NAME = 56;
	public static readonly NORMALSTRING = 57;
	public static readonly CHARSTRING = 58;
	public static readonly LONGSTRING = 59;
	public static readonly INT = 60;
	public static readonly HEX = 61;
	public static readonly FLOAT = 62;
	public static readonly HEX_FLOAT = 63;
	public static readonly COMMENT = 64;
	public static readonly LINE_COMMENT = 65;
	public static readonly WS = 66;
	public static readonly SHEBANG = 67;
	public static readonly RULE_chunk = 0;
	public static readonly RULE_block = 1;
	public static readonly RULE_stat = 2;
	public static readonly RULE_attnamelist = 3;
	public static readonly RULE_attrib = 4;
	public static readonly RULE_retstat = 5;
	public static readonly RULE_label = 6;
	public static readonly RULE_funcname = 7;
	public static readonly RULE_varlist = 8;
	public static readonly RULE_namelist = 9;
	public static readonly RULE_explist = 10;
	public static readonly RULE_exp = 11;
	public static readonly RULE_prefixexp = 12;
	public static readonly RULE_functioncall = 13;
	public static readonly RULE_varOrExp = 14;
	public static readonly RULE_var_ = 15;
	public static readonly RULE_varSuffix = 16;
	public static readonly RULE_nameAndArgs = 17;
	public static readonly RULE_args = 18;
	public static readonly RULE_functiondef = 19;
	public static readonly RULE_funcbody = 20;
	public static readonly RULE_parlist = 21;
	public static readonly RULE_tableconstructor = 22;
	public static readonly RULE_fieldlist = 23;
	public static readonly RULE_field = 24;
	public static readonly RULE_fieldsep = 25;
	public static readonly RULE_operatorOr = 26;
	public static readonly RULE_operatorAnd = 27;
	public static readonly RULE_operatorComparison = 28;
	public static readonly RULE_operatorStrcat = 29;
	public static readonly RULE_operatorAddSub = 30;
	public static readonly RULE_operatorMulDivMod = 31;
	public static readonly RULE_operatorBitwise = 32;
	public static readonly RULE_operatorUnary = 33;
	public static readonly RULE_operatorPower = 34;
	public static readonly RULE_number = 35;
	public static readonly RULE_string = 36;
	// tslint:disable:no-trailing-whitespace
	public static readonly ruleNames: string[] = [
		"chunk", "block", "stat", "attnamelist", "attrib", "retstat", "label", 
		"funcname", "varlist", "namelist", "explist", "exp", "prefixexp", "functioncall", 
		"varOrExp", "var_", "varSuffix", "nameAndArgs", "args", "functiondef", 
		"funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep", 
		"operatorOr", "operatorAnd", "operatorComparison", "operatorStrcat", "operatorAddSub", 
		"operatorMulDivMod", "operatorBitwise", "operatorUnary", "operatorPower", 
		"number", "string",
	];

	private static readonly _LITERAL_NAMES: Array<string | undefined> = [
		undefined, "';'", "'='", "'break'", "'goto'", "'do'", "'end'", "'while'", 
		"'repeat'", "'until'", "'if'", "'then'", "'elseif'", "'else'", "'for'", 
		"','", "'in'", "'function'", "'local'", "'<'", "'>'", "'return'", "'::'", 
		"'.'", "':'", "'nil'", "'false'", "'true'", "'...'", "'('", "')'", "'['", 
		"']'", "'{'", "'}'", "'or'", "'and'", "'<='", "'>='", "'~='", "'=='", 
		"'..'", "'+'", "'-'", "'*'", "'/'", "'%'", "'//'", "'&'", "'|'", "'~'", 
		"'<<'", "'>>'", "'not'", "'#'", "'^'",
	];
	private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", 
		"HEX_FLOAT", "COMMENT", "LINE_COMMENT", "WS", "SHEBANG",
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(LuaParser._LITERAL_NAMES, LuaParser._SYMBOLIC_NAMES, []);

	// @Override
	// @NotNull
	public get vocabulary(): Vocabulary {
		return LuaParser.VOCABULARY;
	}
	// tslint:enable:no-trailing-whitespace

	// @Override
	public get grammarFileName(): string { return "Lua.g4"; }

	// @Override
	public get ruleNames(): string[] { return LuaParser.ruleNames; }

	// @Override
	public get serializedATN(): string { return LuaParser._serializedATN; }

	protected createFailedPredicateException(predicate?: string, message?: string): FailedPredicateException {
		return new FailedPredicateException(this, predicate, message);
	}

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(LuaParser._ATN, this);
	}
	// @RuleVersion(0)
	public chunk(): ChunkContext {
		let _localctx: ChunkContext = new ChunkContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, LuaParser.RULE_chunk);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 74;
			this.block();
			this.state = 75;
			this.match(LuaParser.EOF);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public block(): BlockContext {
		let _localctx: BlockContext = new BlockContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, LuaParser.RULE_block);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 80;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LuaParser.T__0) | (1 << LuaParser.T__2) | (1 << LuaParser.T__3) | (1 << LuaParser.T__4) | (1 << LuaParser.T__6) | (1 << LuaParser.T__7) | (1 << LuaParser.T__9) | (1 << LuaParser.T__13) | (1 << LuaParser.T__16) | (1 << LuaParser.T__17) | (1 << LuaParser.T__21) | (1 << LuaParser.T__28))) !== 0) || _la === LuaParser.NAME) {
				{
				{
				this.state = 77;
				this.stat();
				}
				}
				this.state = 82;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 84;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuaParser.T__20) {
				{
				this.state = 83;
				this.retstat();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public stat(): StatContext {
		let _localctx: StatContext = new StatContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, LuaParser.RULE_stat);
		let _la: number;
		try {
			this.state = 167;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input, 6, this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 86;
				this.match(LuaParser.T__0);
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 87;
				this.varlist();
				this.state = 88;
				this.match(LuaParser.T__1);
				this.state = 89;
				this.explist();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 91;
				this.functioncall();
				}
				break;

			case 4:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 92;
				this.label();
				}
				break;

			case 5:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 93;
				this.match(LuaParser.T__2);
				}
				break;

			case 6:
				this.enterOuterAlt(_localctx, 6);
				{
				this.state = 94;
				this.match(LuaParser.T__3);
				this.state = 95;
				this.match(LuaParser.NAME);
				}
				break;

			case 7:
				this.enterOuterAlt(_localctx, 7);
				{
				this.state = 96;
				this.match(LuaParser.T__4);
				this.state = 97;
				this.block();
				this.state = 98;
				this.match(LuaParser.T__5);
				}
				break;

			case 8:
				this.enterOuterAlt(_localctx, 8);
				{
				this.state = 100;
				this.match(LuaParser.T__6);
				this.state = 101;
				this.exp(0);
				this.state = 102;
				this.match(LuaParser.T__4);
				this.state = 103;
				this.block();
				this.state = 104;
				this.match(LuaParser.T__5);
				}
				break;

			case 9:
				this.enterOuterAlt(_localctx, 9);
				{
				this.state = 106;
				this.match(LuaParser.T__7);
				this.state = 107;
				this.block();
				this.state = 108;
				this.match(LuaParser.T__8);
				this.state = 109;
				this.exp(0);
				}
				break;

			case 10:
				this.enterOuterAlt(_localctx, 10);
				{
				this.state = 111;
				this.match(LuaParser.T__9);
				this.state = 112;
				this.exp(0);
				this.state = 113;
				this.match(LuaParser.T__10);
				this.state = 114;
				this.block();
				this.state = 122;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la === LuaParser.T__11) {
					{
					{
					this.state = 115;
					this.match(LuaParser.T__11);
					this.state = 116;
					this.exp(0);
					this.state = 117;
					this.match(LuaParser.T__10);
					this.state = 118;
					this.block();
					}
					}
					this.state = 124;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				this.state = 127;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === LuaParser.T__12) {
					{
					this.state = 125;
					this.match(LuaParser.T__12);
					this.state = 126;
					this.block();
					}
				}

				this.state = 129;
				this.match(LuaParser.T__5);
				}
				break;

			case 11:
				this.enterOuterAlt(_localctx, 11);
				{
				this.state = 131;
				this.match(LuaParser.T__13);
				this.state = 132;
				this.match(LuaParser.NAME);
				this.state = 133;
				this.match(LuaParser.T__1);
				this.state = 134;
				this.exp(0);
				this.state = 135;
				this.match(LuaParser.T__14);
				this.state = 136;
				this.exp(0);
				this.state = 139;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === LuaParser.T__14) {
					{
					this.state = 137;
					this.match(LuaParser.T__14);
					this.state = 138;
					this.exp(0);
					}
				}

				this.state = 141;
				this.match(LuaParser.T__4);
				this.state = 142;
				this.block();
				this.state = 143;
				this.match(LuaParser.T__5);
				}
				break;

			case 12:
				this.enterOuterAlt(_localctx, 12);
				{
				this.state = 145;
				this.match(LuaParser.T__13);
				this.state = 146;
				this.namelist();
				this.state = 147;
				this.match(LuaParser.T__15);
				this.state = 148;
				this.explist();
				this.state = 149;
				this.match(LuaParser.T__4);
				this.state = 150;
				this.block();
				this.state = 151;
				this.match(LuaParser.T__5);
				}
				break;

			case 13:
				this.enterOuterAlt(_localctx, 13);
				{
				this.state = 153;
				this.match(LuaParser.T__16);
				this.state = 154;
				this.funcname();
				this.state = 155;
				this.funcbody();
				}
				break;

			case 14:
				this.enterOuterAlt(_localctx, 14);
				{
				this.state = 157;
				this.match(LuaParser.T__17);
				this.state = 158;
				this.match(LuaParser.T__16);
				this.state = 159;
				this.match(LuaParser.NAME);
				this.state = 160;
				this.funcbody();
				}
				break;

			case 15:
				this.enterOuterAlt(_localctx, 15);
				{
				this.state = 161;
				this.match(LuaParser.T__17);
				this.state = 162;
				this.attnamelist();
				this.state = 165;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				if (_la === LuaParser.T__1) {
					{
					this.state = 163;
					this.match(LuaParser.T__1);
					this.state = 164;
					this.explist();
					}
				}

				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attnamelist(): AttnamelistContext {
		let _localctx: AttnamelistContext = new AttnamelistContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, LuaParser.RULE_attnamelist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 169;
			this.match(LuaParser.NAME);
			this.state = 170;
			this.attrib();
			this.state = 176;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LuaParser.T__14) {
				{
				{
				this.state = 171;
				this.match(LuaParser.T__14);
				this.state = 172;
				this.match(LuaParser.NAME);
				this.state = 173;
				this.attrib();
				}
				}
				this.state = 178;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public attrib(): AttribContext {
		let _localctx: AttribContext = new AttribContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, LuaParser.RULE_attrib);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 182;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuaParser.T__18) {
				{
				this.state = 179;
				this.match(LuaParser.T__18);
				this.state = 180;
				this.match(LuaParser.NAME);
				this.state = 181;
				this.match(LuaParser.T__19);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public retstat(): RetstatContext {
		let _localctx: RetstatContext = new RetstatContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, LuaParser.RULE_retstat);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 184;
			this.match(LuaParser.T__20);
			this.state = 186;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if ((((_la) & ~0x1F) === 0 && ((1 << _la) & ((1 << LuaParser.T__16) | (1 << LuaParser.T__24) | (1 << LuaParser.T__25) | (1 << LuaParser.T__26) | (1 << LuaParser.T__27) | (1 << LuaParser.T__28))) !== 0) || ((((_la - 33)) & ~0x1F) === 0 && ((1 << (_la - 33)) & ((1 << (LuaParser.T__32 - 33)) | (1 << (LuaParser.T__42 - 33)) | (1 << (LuaParser.T__49 - 33)) | (1 << (LuaParser.T__52 - 33)) | (1 << (LuaParser.T__53 - 33)) | (1 << (LuaParser.NAME - 33)) | (1 << (LuaParser.NORMALSTRING - 33)) | (1 << (LuaParser.CHARSTRING - 33)) | (1 << (LuaParser.LONGSTRING - 33)) | (1 << (LuaParser.INT - 33)) | (1 << (LuaParser.HEX - 33)) | (1 << (LuaParser.FLOAT - 33)) | (1 << (LuaParser.HEX_FLOAT - 33)))) !== 0)) {
				{
				this.state = 185;
				this.explist();
				}
			}

			this.state = 189;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuaParser.T__0) {
				{
				this.state = 188;
				this.match(LuaParser.T__0);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public label(): LabelContext {
		let _localctx: LabelContext = new LabelContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, LuaParser.RULE_label);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 191;
			this.match(LuaParser.T__21);
			this.state = 192;
			this.match(LuaParser.NAME);
			this.state = 193;
			this.match(LuaParser.T__21);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public funcname(): FuncnameContext {
		let _localctx: FuncnameContext = new FuncnameContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, LuaParser.RULE_funcname);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 195;
			this.match(LuaParser.NAME);
			this.state = 200;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LuaParser.T__22) {
				{
				{
				this.state = 196;
				this.match(LuaParser.T__22);
				this.state = 197;
				this.match(LuaParser.NAME);
				}
				}
				this.state = 202;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 205;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la === LuaParser.T__23) {
				{
				this.state = 203;
				this.match(LuaParser.T__23);
				this.state = 204;
				this.match(LuaParser.NAME);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public varlist(): VarlistContext {
		let _localctx: VarlistContext = new VarlistContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, LuaParser.RULE_varlist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 207;
			this.var_();
			this.state = 212;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LuaParser.T__14) {
				{
				{
				this.state = 208;
				this.match(LuaParser.T__14);
				this.state = 209;
				this.var_();
				}
				}
				this.state = 214;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public namelist(): NamelistContext {
		let _localctx: NamelistContext = new NamelistContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, LuaParser.RULE_namelist);
		try {
			let _alt: number;
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 215;
			this.match(LuaParser.NAME);
			this.state = 220;
			this._errHandler.sync(this);
			_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER) {
				if (_alt === 1) {
					{
					{
					this.state = 216;
					this.match(LuaParser.T__14);
					this.state = 217;
					this.match(LuaParser.NAME);
					}
					}
				}
				this.state = 222;
				this._errHandler.sync(this);
				_alt = this.interpreter.adaptivePredict(this._input, 14, this._ctx);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	// @RuleVersion(0)
	public explist(): ExplistContext {
		let _localctx: ExplistContext = new ExplistContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, LuaParser.RULE_explist);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 223;
			this.exp(0);
			this.state = 228;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la === LuaParser.T__14) {
				{
				{
				this.state = 224;
				this.match(LuaParser.T__14);
				this.state = 225;
				this.exp(0);
				}
				}
				this.state = 230;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}

	public exp(): ExpContext;
	public exp(_p: number): ExpContext;
	// @RuleVersion(0)
	public exp(_p?: number): ExpContext {
		if (_p === undefined) {
			_p = 0;
		}
